Remi_Hasan/src/test/resources/qls/InvalidStylesheets/SimpleFormDefaultDecimalRadio.qls
stylesheet simpleForm
{
  page Page1
  {
    section "All Questions"
    {
      question someInteger
      question someBoolean
      question someDecimal
      question someDate
      question someMoney
      question someString
    }
    default decimal {
      width: 4000
      widget radio("yes", "no")
    }
  }
}